Fix border alignment issues

--- a/common/app/assets/stylesheets/module/containers/_news-v2.scss
+++ b/common/app/assets/stylesheets/module/containers/_news-v2.scss
@@ -57,6 +57,7 @@ $metaHeight: 20px;
         @include rem((
             top: $gs-baseline / 2
         ));
+        height: auto;
     }
 }
 
@@ -73,6 +74,7 @@ $metaHeight: 20px;
             margin-left: 0;
             margin-right: 0;
             border-bottom: 1px solid $c-neutral5;
+            @include clearfix;
 
             .item {
                 min-height: 0; // override existing facia styles
@@ -233,6 +235,7 @@ $metaHeight: 20px;
                     width: gs-span(3),
                     height: gs-height(2)
                 ));
+                @include align-separator-with-tone-border;
             }
             &:nth-child(3n+9) {
                 clear: both;
@@ -285,8 +288,6 @@ $metaHeight: 20px;
             }
             &:nth-child(3),
             &:nth-child(4) {
-                @include align-separator-with-tone-border;
-
                 .item__title {
                     @include fs-headline(2, true);
                     @include rem((
@@ -329,7 +330,6 @@ $metaHeight: 20px;
                     height: gs-height(2),
                     margin-left: $gs-gutter
                 ));
-                @include align-separator-with-tone-border;
 
                 .item__title {
                     @include fs-headline(10, true);
@@ -344,6 +344,8 @@ $metaHeight: 20px;
             }
             &:nth-child(n+10) {
                 clear: none;
+                @include align-separator-with-tone-border;
+
                 @include rem((
                     width: gs-span(3),
                     height: gs-height(3)
@@ -507,8 +509,7 @@ $metaHeight: 20px;
             }
             &:nth-child(n+11) {
                 clear: none;
-
-                &:before { @include rem((top: 6px)); }
+                @include align-separator-with-tone-border;
             }
             &:nth-child(4n+11) {
                 clear: both;
